--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jobmatix-pixel",
-  "version": "0.1.0",
+  "name": "@jobmatix.com/pixel",
+  "version": "0.0.3",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -20,10 +20,10 @@
   },
   "type": "module",
   "files": [
-    "tracker"
+    "script.min.js"
   ],
-  "main": "./tracker/script.umd.cjs",
-  "module": "./tracker/script.js",
+  "main": "script.min.js",
+  "module": "./script.min.js",
   "keywords": [
     "jobmatix",
     "pixel"
